queue/network-policy.dev.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kafka-dev
  namespace: stalker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kafka
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: kafka
      ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 9094
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: flow-manager
      ports:
        - protocol: TCP
          port: 9092

    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: orchestrator
      ports:
        - protocol: TCP
          port: 9092

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: kafka
      ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 9094
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
